--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 ﻿{
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es2017",
     "module": "esnext",
     "moduleResolution": "node",
-
-    "experimentalDecorators": true,
 
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
@@ -24,10 +22,6 @@
 
     "baseUrl": ".",
     "rootDir": ".",
-    "outDir": "./out-tsc",
-
-    "paths": {
-      "@dagonmetric/ng-translit": [ "./modules/ng-translit" ]
-    }
+    "outDir": "./out-tsc"
   }
 }
