--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "homepage": "https://github.com/DagonMetric/translit-js",
   "scripts": {
     "karma": "karma",
-    "tsc": "tsc",
     "eslint": "eslint",
+    "lint": "eslint -c .eslintrc.json --ext .js,.ts .",
     "test": "karma start karma.conf.js",
-    "test:ci": "karma start karma.conf.js --single-run --reporters progress,junit,coverage-istanbul --browsers ChromeHeadless",
-    "lint": "eslint -c .eslintrc.json --ext .js,.ts ."
+    "test:ci": "karma start karma.conf.js --single-run --reporters progress,junit,coverage-istanbul --browsers ChromeHeadless"
   },
   "dependencies": {
     "tslib": "~2.0.0"
