--- a/package.json
+++ b/package.json
@@ -11,45 +11,27 @@
     "url": "https://github.com/DagonMetric/translit-js/issues"
   },
   "homepage": "https://github.com/DagonMetric/translit-js",
-  "scripts": {
-    "karma": "karma",
-    "eslint": "eslint",
+  "scripts": {    
     "lint": "eslint -c .eslintrc.json --ext .js,.ts .",
-    "test": "karma start karma.conf.js",
-    "test:ci": "karma start karma.conf.js --single-run --reporters progress,junit,coverage-istanbul --browsers ChromeHeadless"
+    "test": "lib test --env.ci=true"    
   },
   "dependencies": {
-    "tslib": "~2.0.0"
+    "tslib": "~2.0.1"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^14.0.13",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "eslint": "^7.3.0",
+    "@types/node": "^14.11.2",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsdoc": "^28.0.0",
-    "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-prefer-arrow": "^1.2.1",
+    "eslint-plugin-jsdoc": "^30.5.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "~5.0.2",
-    "karma": "^5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~3.3.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "prettier": "^2.0.5",
-    "source-map-loader": "^1.0.0",
-    "ts-loader": "^7.0.5",
-    "ts-node": "^8.10.2",
-    "typescript": "~3.9.5",
-    "webpack": "^4.43.0"
+    "jasmine-core": "^3.6.0",
+    "lib-tools": "^1.2.0",
+    "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
+    "typescript": "~4.0.3"
   }
 }
