--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         npm ci
         npm run build --if-present
         npm run lint --if-present
-        npm run test:ci --if-present
+        npm run test --if-present
     - uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
