--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "url": "https://github.com/DagonMetric/translit-js/issues"
   },
   "homepage": "https://github.com/DagonMetric/translit-js",
-  "scripts": {    
+  "scripts": {
     "lint": "eslint -c .eslintrc.json --ext .js,.ts .",
-    "test": "lib test"
+    "test": "lib test --env.ci=true"
   },
   "dependencies": {
     "tslib": "~2.0.1"
@@ -25,11 +25,11 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jsdoc": "^30.5.2",
     "eslint-plugin-prettier": "^3.1.4",
     "jasmine-core": "^3.6.0",
-    "lib-tools": "^1.2.0",
+    "lib-tools": "^1.2.1",
     "prettier": "^2.1.2",
     "ts-node": "^9.0.0",
     "typescript": "~4.0.3"
