--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "translit-js",
-  "version": "0.0.0",
+  "name": "@dagonmetric/translit-js",
+  "version": "1.0.0",
   "description": "General purpose transliterate service for JavaScript applications which can be used in swapping letters such as α → a, ၎ → ၎င်း.",
   "author": "DagonMetric",
   "license": "MIT",
