--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -17,11 +17,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, build, lint and test
+    - name: npm install, lint, build and test
       run: |
         npm ci
-        npm run build --if-present
         npm run lint --if-present
+        npm run build        
         npm run test --if-present    
       env:
         CI: true
