--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2017",
     "module": "esnext",
     "moduleResolution": "node",
-
+    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
@@ -13,13 +13,11 @@
     "strictNullChecks": true,
     "stripInternal": true,
     "strictPropertyInitialization": true,
-
     "sourceMap": true,
     "importHelpers": true,
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "lib": [ "es2018", "dom" ],
-
     "baseUrl": ".",
     "rootDir": ".",
     "outDir": "./out-tsc"
